--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.16.4",
+    "mongodb": "^3.6.0"
   },
   "engines": {
     "node": "8.x"
